Add navigation tab for POST 318B.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,6 +18,9 @@ main:
   - title: "Resources"
     url: /resources/
 
+  - title: "POST 318B"
+    url: /icslounge
+
 
 # documentation links
 docs:
