Add Brian picture to the about page

--- a/_data/officers.yml
+++ b/_data/officers.yml
@@ -46,7 +46,7 @@
   slack_handle: brianmay
   email       : "brianmay@hawaii.edu"
   bio         : ""
-  avatar      : "bio-photo.jpg"
+  avatar      : "brianmay.jpg"
   twitter     :
   google_plus :
 
