Updated profile photos for sean and chris

--- a/_data/officers.yml
+++ b/_data/officers.yml
@@ -16,7 +16,7 @@
   slack_handle: somnoms
   email       : "cpjaro@hawaii.edu"
   bio         : ""
-  avatar      : "bio-photo.jpg"
+  avatar      : "christopherjaro.png"
   twitter     :
   google_plus :
 
@@ -36,7 +36,6 @@
   slack_handle: seanytak
   email       : "seanytak@hawaii.edu"
   bio         : ""
-  avatar      : "bio-photo.jpg"
+  avatar      : "sean_takafuji.png"
   twitter     :
   google_plus :
-  
