Updated Treasurer's profile picture
Mark A

--- a/_data/officers.yml
+++ b/_data/officers.yml
@@ -26,7 +26,7 @@
   slack_handle: marka2
   email       : "marka2@hawaii.edu"
   bio         : ""
-  avatar      : "bio-photo.jpg"
+  avatar      : "marka.png"
   twitter     :
   google_plus :
 
