--- a/_data/officers.yml
+++ b/_data/officers.yml
@@ -20,13 +20,13 @@
   twitter     :
   google_plus :
 
-- name        : "Mark Arakaki"
+- name        : "Michael Mangrobang"
   role        : "Event Coordinator"
   uri         :
-  slack_handle: marka2
-  email       : "marka2@hawaii.edu"
+  slack_handle: Mickey
+  email       : "mjm4@hawaii.edu"
   bio         : ""
-  avatar      : "marka.png"
+  avatar      : "mickey.png"
   twitter     :
   google_plus :
 
