--- a/_data/officers.yml
+++ b/_data/officers.yml
@@ -26,7 +26,7 @@
   slack_handle: Mickey
   email       : "mjm4@hawaii.edu"
   bio         : ""
-  avatar      : "mickey.jpg"
+  avatar      : "https://github.com/ACManoa/acmanoa.github.io/blob/master/images/mickey.jpg"
   twitter     :
   google_plus :
 
