update pic for board

--- a/_data/officers.yml
+++ b/_data/officers.yml
@@ -16,7 +16,7 @@
   slack_handle: tyu
   email       : "tyu@hawaii.edu"
   bio         : ""
-  avatar      : "bio-photo.jpg"
+  avatar      : "tyu.png"
   twitter     :
   google_plus :
 
