--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # SITE CONFIGURATION
-title: ACManoa # your site title
+title: ACM@MANOA # your site title
 author: ACManoa # You :P
 description: > # Meta description of Homepage
   ACManoa is the largest computer science student organization at the University of Hawaii at Manoa. We welcome students of all different backgrounds, interests, and skill levels to join our community and share in our passion for CS. ACM is split into different special interest groups (SIG's) — each with a different goal. Although some events may "belong" to a certain group, being a member of a special interest group is the same as being a member of ACManoa. Our events are always and will always be open to everyone.
