--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,7 @@ email: acmmanoa@hawaii.edu # email for form submission
 #twitter_username: jan_czizikow # replace with your_twitter_username or comment to remove link from footer
 github_username:  acmanoa # replace with your_github_username or comment to remove link from footer
 #instagram_username: shanlongjj # replace with your_instagram_username or comment to remove link from footer
+discord: https://discord.gg/pnrYV5T
 
 #disqus:
 #  shortname: janczizikow # to enable comments replace with your_disqus_shortname
