Add Mailchimp signup

--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ email: acmmanoa@hawaii.edu # email for form submission
 github_username:  acmanoa # replace with your_github_username or comment to remove link from footer
 #instagram_username: shanlongjj # replace with your_instagram_username or comment to remove link from footer
 discord: https://discord.gg/pnrYV5T
+mailchimp: http://eepurl.com/bOCcTP
 
 #disqus:
 #  shortname: janczizikow # to enable comments replace with your_disqus_shortname
