--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ mailchimp: http://eepurl.com/bOCcTP
 #disqus:
 #  shortname: janczizikow # to enable comments replace with your_disqus_shortname
 
-# google_tag_manager: GTM-XXXXXXX # Uncomment to enable GTM. Replace GTM-XXXXXXX with your GTM container ID
+google_tag_manager: GTM-P26T7BM # Uncomment to enable GTM. Replace GTM-XXXXXXX with your GTM container ID
 
 service_worker: true
 
