--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ navigation: # Navigation links
   - {name: 'About', link: '/about'}
   - {name: 'ACI', link: '/aci'}
   - {name: 'Grey Hats', link: '/greyhats'}
+  - {name: 'Data Science', link: '/datascience'}
   - {name: 'ICSpace', link: '/icspace'}
   - {name: 'Sponsors', link: '/sponsors'}
   - {name: 'Contact', link: '/contact'}
