--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ navigation: # Navigation links
   - {name: 'ACI', link: '/aci'}
   - {name: 'Grey Hats', link: '/greyhats'}
   - {name: 'Data Science', link: '/datascience'}
+  - {name: 'Game Dev', link: '/gamedev'}
   - {name: 'ICSpace', link: '/icspace'}
   - {name: 'Sponsors', link: '/sponsors'}
   - {name: 'Contact', link: '/contact'}
