--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ email: acmmanoa@hawaii.edu # email for form submission
 #twitter_username: jan_czizikow # replace with your_twitter_username or comment to remove link from footer
 github_username:  acmanoa # replace with your_github_username or comment to remove link from footer
 #instagram_username: shanlongjj # replace with your_instagram_username or comment to remove link from footer
-discord: https://discord.gg/pnrYV5T
+discord: https://discord.gg/hUANusC
 mailchimp: http://eepurl.com/bOCcTP
 
 #disqus:
