--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ navigation: # Navigation links
   - {name: 'Grey Hats', link: '/greyhats'}
   - {name: 'Game Dev', link: '/gamedev'}
   - {name: 'SWITCH', link: '/switch'}
+  - {name: 'ICSpark', link: '/icspark'}
   - {name: 'ICSpace', link: '/icspace'}
   - {name: 'Sponsors', link: '/sponsors'}
   - {name: 'Contact', link: '/contact'}
