--- a/package.json
+++ b/package.json
@@ -4,39 +4,36 @@
   "description": "Sleek is a modern Jekyll theme focused on speed performance & SEO best practices.",
   "main": "gulpfile.js",
   "dependencies": {
-    "breakpoint-sass": "^2.7.1",
-    "fg-loadcss": "^1.3.1",
-    "jquery": "^3.2.1",
-    "lazysizes": "^4.0.1",
-    "normalize.css": "^7.0.0",
+    "fg-loadcss": "^3.1.0",
+    "jquery": "^3.7.1",
+    "lazysizes": "^5.3.2",
+    "normalize.css": "^8.0.1",
     "picturefill": "^3.0.2",
-    "velocity-animate": "^1.5.0"
+    "velocity-animate": "^1.5.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
-    "babelify": "^8.0.0",
-    "browser-sync": "^2.18.13",
-    "browserify": "^15.2.0",
-    "critical": "^1.0.0",
-    "eslint": "^4.15.0",
-    "eslint-config-jquery": "^1.0.1",
-    "eslint-plugin-dollar-sign": "^1.0.1",
-    "eslint-plugin-jquery": "^1.3.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.0.0",
+    "babelify": "^10.0.0",
+    "browser-sync": "^3.0.2",
+    "browserify": "^17.0.0",
+    "critical": "^7.1.0",
+    "eslint": "^8.56.0",
+    "eslint-config-jquery": "^3.0.2",
+    "eslint-plugin-dollar-sign": "^1.0.2",
+    "eslint-plugin-jquery": "^1.5.1",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^9.0.0",
     "gulp-clean": "^0.4.0",
-    "gulp-gh-pages": "^0.5.4",
-    "gulp-htmlmin": "^3.0.0",
-    "gulp-imagemin": "^4.0.0",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-notify": "^3.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-responsive": "^2.8.0",
-    "gulp-sass": "^3.1.0",
-    "gulp-size": "^3.0.0",
-    "gulp-sourcemaps": "^2.6.1",
-    "gulp-uglify": "^3.0.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^9.0.0",
+    "gulp-notify": "^4.0.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-responsive": "^3.0.1",
+    "gulp-sass": "^5.1.0",
+    "gulp-size": "^5.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify": "^3.0.2",
     "sw-precache": "^5.2.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
@@ -55,5 +52,8 @@
   "bugs": {
     "url": "https://github.com/janczizikow/sleek/issues"
   },
-  "homepage": "https://github.com/janczizikow/sleek#readme"
+  "homepage": "https://github.com/janczizikow/sleek#readme",
+  "volta": {
+    "node": "20.10.0"
+  }
 }
