--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,6 @@ navigation: # Navigation links
   - {name: 'Events', link: '/pages/event'}
   - {name: 'About', link: '/pages/about'}
   - {name: 'Sponsors', link: '/pages/sponsors'}
-  - {name: 'Contact', link: '/pages/contact'}
 
 SIGS:
   - {name: 'Ballroom', link: '/pages/clubs/ballroom'}
@@ -44,11 +43,11 @@ email: acmmanoa@hawaii.edu # email for form submission
 github_username:  acmanoa # replace with your_github_username or comment to remove link from footer
 #instagram_username: shanlongjj # replace with your_instagram_username or comment to remove link from footer
 discord: https://discord.gg/hUANusC
-mailchimp: http://eepurl.com/bOCcTP
-
+# mailchimp: http://eepurl.com/bOCcTP
+instagram_username: manoaacm
 #disqus:
 #  shortname: janczizikow # to enable comments replace with your_disqus_shortname
-
+contact: {name: 'Contact Us', link: '/pages/contact'}
 google_tag_manager: GTM-P26T7BM # Uncomment to enable GTM. Replace GTM-XXXXXXX with your GTM container ID
 
 service_worker: true
