--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ email: acmmanoa@hawaii.edu # email for form submission
 #twitter_username: jan_czizikow # replace with your_twitter_username or comment to remove link from footer
 github_username:  acmanoa # replace with your_github_username or comment to remove link from footer
 #instagram_username: shanlongjj # replace with your_instagram_username or comment to remove link from footer
-discord: https://discord.gg/hUANusC
+discord: https://discord.gg/acmanoa-438617987701014528
 # mailchimp: http://eepurl.com/bOCcTP
 instagram_username: manoaacm
 #disqus:
